CSS fix for overlaping text

--- a/client/stylesheets/home/components/_top.scss
+++ b/client/stylesheets/home/components/_top.scss
@@ -64,6 +64,10 @@
     left: 50%;
     width: 100%;
     @include transform(translate(-50%, 0));
+
+    h4 {
+      font-size: 1.60em;
+    }
   }
   .mission {
     button {
